--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
 		"@angular/platform-browser": "~5.2.0",
 		"@angular/platform-browser-dynamic": "~5.2.0",
 		"@angular/router": "~5.2.0",
+		"font-awesome": "^4.7.0",
 		"nativescript-angular": "~5.2.0",
 		"nativescript-plugin-firebase": "^5.1.8",
 		"nativescript-telerik-ui": "^3.1.4",
 		"nativescript-theme-core": "~1.0.4",
+		"npm": "^5.8.0",
 		"reflect-metadata": "~0.1.8",
 		"rxjs": "~5.5.0",
 		"tns-core-modules": "~3.4.0",
