--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
 	"repository": "<fill-your-repository-here>",
 	"nativescript": {
 		"id": "org.nativescript.clownia",
+		"tns-ios": {
+			"version": "3.4.1"
+		},
 		"tns-android": {
 			"version": "3.4.2"
 		}
