--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
   "main": "main.js",
-  "name": "nativescript-template-ng-groceries",
-  "version": "3.4.0"
+  "name": "clownia-app",
+  "version": "0.0.0"
 }
