--- a/app/App_Resources/Android/AndroidManifest.xml
+++ b/app/App_Resources/Android/AndroidManifest.xml
@@ -26,7 +26,10 @@
 		android:theme="@style/LaunchScreenThemeBase" >
 		<!-- add this: -->      
 		<meta-data android:name="SET_THEME_ON_LAUNCH" android:resource="@style/AppTheme" />
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+		<meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+		<meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/nativescript_google_maps_api_key" />
 		<activity
 			android:name="com.tns.NativeScriptActivity"
 			android:label="@string/title_activity_kimera"
