--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
 	"repository": "<fill-your-repository-here>",
 	"nativescript": {
 		"id": "org.nativescript.clownia",
-		"tns-android": {
-			"version": "3.4.2"
-		},
 		"tns-ios": {
 			"version": "3.4.1"
+		},
+		"tns-android": {
+			"version": "3.4.3"
 		}
 	},
 	"dependencies": {
@@ -26,6 +26,8 @@
 		"@angular/router": "~5.2.0",
 		"font-awesome": "^4.7.0",
 		"nativescript-angular": "~5.2.0",
+		"nativescript-google-maps-sdk": "^2.6.0",
+		"nativescript-local-notifications": "^2.0.3",
 		"nativescript-plugin-firebase": "^5.1.8",
 		"nativescript-telerik-ui": "^3.1.4",
 		"nativescript-theme-core": "~1.0.4",
