--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@angular/router": "~5.2.0",
 		"font-awesome": "^4.7.0",
 		"nativescript-angular": "~5.2.0",
+		"nativescript-feedback": "^1.2.0",
 		"nativescript-google-maps-sdk": "^2.6.0",
 		"nativescript-local-notifications": "^2.0.3",
 		"nativescript-plugin-firebase": "^5.1.8",
