--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
 		"@angular/router": "~5.2.0",
 		"font-awesome": "^4.7.0",
 		"nativescript-angular": "~5.2.0",
-		"nativescript-feedback": "^1.2.0",
 		"nativescript-google-maps-sdk": "^2.6.0",
 		"nativescript-local-notifications": "^2.0.3",
 		"nativescript-plugin-firebase": "^5.1.8",
+		"nativescript-snackbar": "^2.0.1",
 		"nativescript-telerik-ui": "^3.1.4",
 		"nativescript-theme-core": "~1.0.4",
 		"nativescript-videoplayer": "^4.0.0",
